# soroban-verify-backend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  state.rs
crates/api/src/routes/: badge.rs  contracts.rs  mod.rs  verifications.rs  verify.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  error.rs  lib.rs  models.rs  repo.rs  rpc.rs  sep58.rs  trust.rs  validate.rs
crates/worker/: Cargo.toml
crates/worker/src/: attest.rs  compare.rs  git.rs  logger.rs  main.rs  pipeline.rs  sandbox.rs
migrations/: 0001_init.sql  0002_attestation.sql  0002_sep58.sql
