[package]
name = "soroban-verify-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
soroban-verify-common = { workspace = true }

anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
