[package]
name = "soroban-verify-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
soroban-verify-common = { workspace = true }

anyhow = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = "2"
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
stellar-strkey = "0.0.6"
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
